syntax = "proto3";
package greeting ;


option java_package = "com.proto.greeting";
option java_multiple_files = true;

message Greeting{
    string first_name =1;
    string last_name = 2;
}

message GreetingRequest{
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

message GreetingManyTimesRequest{
    string firstName = 1;
    string lastName = 2;
}

message GreetingManyTimesResponse{
    string result = 1;
}

service GreetingService {
    rpc greet (GreetingRequest) returns (GreetingResponse);
    rpc greetManyTimes(GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse);
}